force-app/main/default/objects/MarketInsightUpdate__c/MarketInsightUpdate__c.object-meta.xml
<CustomObject>
    <label>Market Insight Subscription</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Insight Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>