force-app/main/default/objects/MarketInsightUpdate__c/fields/Bedrooms_hz__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_hz__c</fullName>
    <label>Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>