force-app/main/default/objects/MarketInsightUpdate__c/fields/CcAgent__c.field-meta.xml
<CustomField>
    <fullName>CcAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Agent</label>
    <type>Checkbox</type>
</CustomField>