force-app/main/default/objects/MarketInsightUpdate__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>monthly</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>quarterly</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>inactive</fullName>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>