force-app/main/default/objects/MarketInsightUpdate__c/fields/LeadSubscribed__c.field-meta.xml
<CustomField>
    <fullName>LeadSubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Subscribed</label>
    <type>Checkbox</type>
</CustomField>