force-app/main/default/objects/MarketInsightUpdate__c/fields/ListingPrice_hz_min__c.field-meta.xml
<CustomField>
    <fullName>ListingPrice_hz_min__c</fullName>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>