force-app/main/default/objects/MarketInsightUpdate__c/fields/MarketInsight__c.field-meta.xml
<CustomField>
    <fullName>MarketInsight__c</fullName>
    <label>Market Insight</label>
    <referenceTo>MarketInsight__c</referenceTo>
    <relationshipLabel>Market Insight Subscriptions</relationshipLabel>
    <relationshipName>MarketInsightUpdates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>