force-app/main/default/objects/MarketInsightUpdate__c/fields/SystemIsExternalDelete__c.field-meta.xml
<CustomField>
    <fullName>SystemIsExternalDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Is External Delete</label>
    <type>Checkbox</type>
</CustomField>