force-app/main/default/objects/MarketInsightUpdate__c/listViews/All_Market_Insight_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Market_Insight_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>MarketInsight__c</columns>
    <columns>PropertyType__c</columns>
    <columns>Bedrooms_hz__c</columns>
    <columns>ListingPrice_hz_min__c</columns>
    <columns>ListingPrice_hz_max__c</columns>
    <columns>Frequency__c</columns>
    <columns>UnsubscribedAt__c</columns>
    <columns>CcAgent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Market Insight Subscriptions</label>
</ListView>